--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
         "maxsosuu",
         "Sosuu"
     ],
-    "commentTranslate.hover.enabled": true
+    "commentTranslate.hover.enabled": true,
+    "java.project.sourcePaths": [
+        "socket-3/src",
+        "socket-2/src",
+        "socket-3/threading"
+    ]
 }
